--- a/log.html
+++ b/log.html
@@ -2071,25 +2071,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,5862],[],[[1,0,0,[],[0,367,5494,4],[[0,5,6,0,7,8,0,0,[1,368,5183],[[368,2,9]]],[0,10,6,0,11,0,0,0,[1,5551,34],[]],[0,12,6,0,13,14,0,0,[0,5586,274],[[5586,2,15],[5858,2,16],[5858,5,4]]],[0,17,18,0,19,20,0,0,[3,5861,0],[]]]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,5542],[],[[4,0,0,[],[1,333,5208],[[0,5,6,0,7,8,0,0,[1,334,2183],[[334,2,9]]],[0,10,6,0,11,0,0,0,[1,2517,23],[]],[0,12,13,0,14,15,0,0,[1,2540,3000],[[5541,2,16]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test","*E:\\CODE\\PythonProjects\\RobotFrameWork\\Test.robot","*Test.robot","*Element with locator 'data-test=nav-sign-in' not found.","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://practicesoftwaretesting.com/#/\">https://practicesoftwaretesting.com/#/\x3c/a>    edge","*Opening browser 'edge' to base url '<a href=\"https://practicesoftwaretesting.com/#/\">https://practicesoftwaretesting.com/#/\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*data-test=nav-sign-in","*Clicking element 'data-test=nav-sign-in'.","*\x3c/td>\x3c/tr><tr><td colspan=\"3\"><a href=\"selenium-screenshot-2.png\"><img src=\"selenium-screenshot-2.png\" width=\"800px\">\x3c/a>","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*time_in_seconds=3"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TC Register User","*E:\\CODE\\AuticonAssesment2025\\RoboTests\\TC_Register_User.robot","*RoboTests/TC_Register_User.robot","*Test","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://practicesoftwaretesting.com/#/\">https://practicesoftwaretesting.com/#/\x3c/a>    edge","*Opening browser 'edge' to base url '<a href=\"https://practicesoftwaretesting.com/#/\">https://practicesoftwaretesting.com/#/\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*3s","*Slept 3 seconds."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:05","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:06","fail":1,"id":"s1","label":"Test","name":"Test","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:05","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:06","fail":0,"id":"s1","label":"TC Register User","name":"TC Register User","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1739794730425;
+window.output["baseMillis"] = 1739795939560;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 5864;
+window.output["generated"] = 5544;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
