--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,5862],[],[[1,0,0,[],[0,367,5494,4],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,5542],[],[[4,0,0,[],[1,333,5208],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test","*E:\\CODE\\PythonProjects\\RobotFrameWork\\Test.robot","*Test.robot","*Element with locator 'data-test=nav-sign-in' not found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*TC Register User","*E:\\CODE\\AuticonAssesment2025\\RoboTests\\TC_Register_User.robot","*RoboTests/TC_Register_User.robot","*Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:05","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:06","fail":1,"id":"s1","label":"Test","name":"Test","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:05","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:06","fail":0,"id":"s1","label":"TC Register User","name":"TC Register User","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1739794730425;
+window.output["baseMillis"] = 1739795939560;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 5864;
+window.output["generated"] = 5544;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
