--- a/log.html
+++ b/log.html
@@ -2071,25 +2071,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,5542],[],[[4,0,0,[],[1,333,5208],[[0,5,6,0,7,8,0,0,[1,334,2183],[[334,2,9]]],[0,10,6,0,11,0,0,0,[1,2517,23],[]],[0,12,13,0,14,15,0,0,[1,2540,3000],[[5541,2,16]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,15399],[],[[4,0,0,[],[1,350,15049],[[0,5,6,0,7,8,0,0,[1,351,2806],[[351,2,9]]],[0,10,6,0,11,0,0,0,[1,3157,25],[]],[0,12,13,0,14,15,0,0,[1,3182,3000],[[6183,2,16]]],[0,17,6,0,18,19,0,0,[1,6183,59],[[6183,2,20]]],[0,12,13,0,14,15,0,0,[1,6243,3001],[[9243,2,16]]],[0,17,6,0,18,21,0,0,[1,9243,92],[[9244,2,22]]],[0,12,13,0,14,15,0,0,[1,9335,3000],[[12336,2,16]]],[0,23,6,0,24,25,0,0,[1,12336,62],[[12336,2,26]]],[0,12,13,0,14,15,0,0,[1,12398,3000],[[15398,2,16]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TC Register User","*E:\\CODE\\AuticonAssesment2025\\RoboTests\\TC_Register_User.robot","*RoboTests/TC_Register_User.robot","*Test","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://practicesoftwaretesting.com/#/\">https://practicesoftwaretesting.com/#/\x3c/a>    edge","*Opening browser 'edge' to base url '<a href=\"https://practicesoftwaretesting.com/#/\">https://practicesoftwaretesting.com/#/\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*3s","*Slept 3 seconds."]);
+window.output["strings"] = window.output["strings"].concat(["*","*TC Register User","*E:\\CODE\\AuticonAssesment2025\\RoboTests\\TC_Register_User.robot","*RoboTests/TC_Register_User.robot","*Test","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://practicesoftwaretesting.com/#/\">https://practicesoftwaretesting.com/#/\x3c/a>    edge","*Opening browser 'edge' to base url '<a href=\"https://practicesoftwaretesting.com/#/\">https://practicesoftwaretesting.com/#/\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*3s","*Slept 3 seconds.","*Click Link","*<p>Clicks a link identified by <code>locator\x3c/code>.\x3c/p>","*link:Sign in","*Clicking link 'link:Sign in'.","*link:Register your account","*Clicking link 'link:Register your account'.","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*id=first_name    user1","*Typing text 'user1' into text field 'id=first_name'."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:05","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:06","fail":0,"id":"s1","label":"TC Register User","name":"TC Register User","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:15","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:15","fail":0,"id":"s1","label":"TC Register User","name":"TC Register User","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1739795939560;
+window.output["baseMillis"] = 1739797113556;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 5544;
+window.output["generated"] = 15402;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
