--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,11223],[],[[4,0,0,[],[0,346,10877,5],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,9197],[],[[4,0,0,[],[1,342,1],[]],[5,0,0,[],[0,344,8852,6],[]]],[],[2,1,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TC Register User","*E:\\CODE\\AuticonAssesment2025\\RoboTests\\TC_Register_User.robot","*RoboTests/TC_Register_User.robot","*Test","*No browser is open."]);
+window.output["strings"] = window.output["strings"].concat(["*","*TC Register User","*E:\\CODE\\AuticonAssesment2025\\RoboTests\\TC_Register_User.robot","*RoboTests/TC_Register_User.robot","*Awake","*Assesment","*Element with locator 'button=Register' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:11","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:11","fail":1,"id":"s1","label":"TC Register User","name":"TC Register User","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:09","fail":1,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:09","fail":1,"id":"s1","label":"TC Register User","name":"TC Register User","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1739798378621;
+window.output["baseMillis"] = 1739799365378;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 11226;
+window.output["generated"] = 9201;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
