Created an animation to make is simplier to review

--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,28476],[],[[4,0,0,[],[1,377,2],[]],[5,0,0,[],[1,379,2785],[]],[6,0,0,[],[1,3164,1062],[]],[7,0,0,[],[1,4227,1071],[]],[8,0,0,[],[1,5298,1664],[]],[9,0,0,[],[1,6963,20168],[]],[10,0,0,[],[1,27131,107],[]],[11,0,0,[],[1,27239,1124],[]],[12,0,0,[],[0,28364,112,13],[]]],[],[9,8,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,29392],[],[[4,0,0,[],[1,389,2],[]],[5,0,0,[],[1,391,2797],[]],[6,0,0,[],[1,3188,1066],[]],[7,0,0,[],[1,4254,1083],[]],[8,0,0,[],[1,5338,1800],[]],[9,0,0,[],[1,7139,1056],[]],[10,0,0,[],[1,8195,62],[]],[11,0,0,[],[1,8258,1083],[]],[12,0,0,[],[1,9341,20050],[]]],[],[9,9,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TC Register User","*E:\\CODE\\AuticonAssesment2025\\RoboTests\\TC_Register_User.robot","*RoboTests/TC_Register_User.robot","*Awake","*OpenWebsite","*ClickSignIn","*ClickRegister","*FillRegistrationData","*ClickRegisterButton","*InsertCorrectUsername","*InsertCorrectPassword","*ClickLoginButton","*Element with locator '<a href=\"xpath://input[@type=&quot;submit\">xpath://input[@type=\"submit\x3c/a>\"]' not found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*TC Register User","*E:\\CODE\\AuticonAssesment2025\\RoboTests\\TC_Register_User.robot","*RoboTests/TC_Register_User.robot","*Awake","*OpenWebsite","*ClickSignIn","*ClickRegister","*FillRegistrationData","*ClickRegisterButton","*InsertCorrectUsername","*InsertCorrectPassword","*ClickLoginButton"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:28","fail":1,"label":"All Tests","pass":8,"skip":0}],[],[{"elapsed":"00:00:28","fail":1,"id":"s1","label":"TC Register User","name":"TC Register User","pass":8,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:29","fail":0,"label":"All Tests","pass":9,"skip":0}],[],[{"elapsed":"00:00:29","fail":0,"id":"s1","label":"TC Register User","name":"TC Register User","pass":9,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1739807615813;
+window.output["baseMillis"] = 1739812644129;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 28484;
+window.output["generated"] = 29399;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
