--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,11930],[],[[4,0,0,[],[1,381,3993],[]],[5,0,0,[],[1,4375,1003],[]],[6,0,0,[],[1,5378,165],[]],[7,0,0,[],[1,5543,637],[]],[8,0,0,[],[1,6181,279],[]],[9,0,0,[],[1,6460,74],[]],[10,0,0,[],[1,6535,212],[]],[11,0,0,[],[1,6747,121],[]],[12,0,0,[],[1,6868,60],[]],[13,0,0,[],[1,6929,5001],[]]],[],[10,10,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,16157],[],[[4,0,0,[],[1,373,1],[]],[5,0,0,[],[1,375,4609],[]],[6,0,0,[],[1,4984,1075],[]],[7,0,0,[],[1,6059,1109],[]],[8,0,0,[],[1,7169,1721],[]],[9,0,0,[],[1,8890,1071],[]],[10,0,0,[],[1,9961,70],[]],[11,0,0,[],[1,10031,1054],[]],[12,0,0,[],[1,11086,5070],[]]],[],[9,9,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TC Order Tool","*E:\\CODE\\AuticonAssesment2025\\RoboTests\\TC_Order_Tool.robot","*RoboTests/TC_Order_Tool.robot","*Open Website","*Login To Website","*SearchTool","*Put Tool In Cart","*ProceedInCart-StepOne Cart","*ProceedInCart-StepTwo Sign In","*ProceedInCart-StepThree Billing Address","*ProceedInCart-StepFour Payment","*FinishTransaction","*DelayAtTheEnd"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TC Register User","*E:\\CODE\\AuticonAssesment2025\\RoboTests\\TC_Register_User.robot","*RoboTests/TC_Register_User.robot","*Awake","*OpenWebsite","*ClickSignIn","*ClickRegister","*FillRegistrationData","*ClickRegisterButton","*InsertCorrectUsername","*InsertCorrectPassword","*ClickLoginButton"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:12","fail":0,"label":"All Tests","pass":10,"skip":0}],[],[{"elapsed":"00:00:12","fail":0,"id":"s1","label":"TC Order Tool","name":"TC Order Tool","pass":10,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":9,"skip":0}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"TC Register User","name":"TC Register User","pass":9,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1739900216084;
+window.output["baseMillis"] = 1739905115436;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 11936;
+window.output["generated"] = 16163;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
